# trashword

./: Cargo.toml  README.md  install.sh
src/: auth.rs  clipboard.rs  commands.rs  encoder.rs  hash.rs  main.rs  secure.rs  validator.rs
