[package]
name = "trashword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
argon2 = "0.5.0"
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
const_format = "0.2.30"
rand = "0.8.5"
rpassword = "7.2.0"
